--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <main class="main fr">
+    <main class="fr">
         <nav class="nav-menu fc f-a-flexStart">
-           <div class="menu-header fc  f-center ">
+           <div class="fc  f-center ">
                 <div class="menu-title fc f-center">
                    <h2>Slaca 2019</h2>
                 </div>
@@ -59,25 +59,84 @@
         </nav>
         <div target id="nav1" class="container fc f-j-spaceBetween">
             <div  class="container-main fc">
-                <div class="container-header fr">
+                <div class="container-header fr f-center f-j-spaceBetween">
                     <div class="container-title">
-                        <h1>titulo</h1>
+                        <span>Anais do Simpósio Latino Americano de Ciências de Alimentos</span>
+                        <h4>Anais do 13º Simpósio Latino Americano de Ciência de Alimentos </h4>
+                        <i>Issn: 1234-5678</i>
                     </div>
-                    <div class="container-language">
-                        <h1>buttom</h1>
+                    <div class="fr f-center">
+                        <div class="container-language ">
+                            <button class="fr f-center f-j-spaceEvenly">
+                                <img src="/assets/language.svg" alt="">
+                                <p>pt, br </p>
+                                <img src="/assets/dropdown.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="container-autor fr">
+                            <div class="autor-infor"> 
+                                <p>Bem vindo!</p>
+                                <a href="mailto: alguem12@galoascience.com">alguem12@galoascience.com</a>
+                            </div>
+                           <img id="userImage" src="assets/image.svg" alt="Foto pessoal">
+                        </div>
                     </div>
-                    <div class="container-autor">
-                        <h1>perfil</h1>
-                    </div>
+                   
                 </div>
                 <div class="container-column fr">
                     <div class="column-video fc">
-                        <div class="video-title"><h1>titulo do video</h1></div>
-                        <div class="video-link"><h1>video</h1></div>
+                        <div class="video-title">
+                            <h5>Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do município de Campinas/SP </h5>
+                        </div>
+                        <div class="video-link">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xYh5dy41TjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>
                     <div class="column-details fc">
-                        <div class="details-buttons"><h1>botoes</h1></div>
-                        <div class="details-infor"><h1>detalhes</h1></div>
+                        <div class="details-buttons fc">
+                            <div class="buttons">
+                                <button>
+                                    <img src="/assets/download.svg" alt="">
+                                    <i>Download</i>
+                                </button>
+                                <button>
+                                    <img src="/assets/favorite.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="/assets/doi.svg" alt="">
+                                </button>
+                            </div>
+                            <p>Como citar esse trabalho?</p>
+                        </div>
+                        <div class="details-infor">
+                            <div class="infor-header">
+                                <h5>Detalhes</h5>
+                            </div>
+                            <div class="infor-main">
+                                <div class="main">
+                                    <ul id="infor">
+                                        <li>Tipo de apresentação:<span>Póster</span></li>
+                                        <li>Eixo temático:<span>Alimentação e saúde(AS)</span></li>
+                                        <li>Palavras-chaves:<span>Alimentos funcionais, alimentação escolar.</span></li>
+                                    </ul>
+                                    <ul id="autor">
+                                        <p>Autores:</p>
+                                        <li>Galileo Galilei<sup>1</sup></li>
+                                        <li>Berta Lange de Morretes<sup>2</sup></li>
+                                        <li>Isaac Newton<sup>3</sup></li>
+                                        <li>Cesar Lattes<sup>4</sup></li>
+                                        <li>Stephen Hawking<sup>5</sup></li>
+                                    </ul>
+                                    <ul id="acad">
+                                        <li><sup>1</sup>Universidade Estadual de Campinas</li>
+                                        <li><sup>2</sup>Universidade de São Paulo</li>
+                                        <li><sup>3</sup>Instituto Nacional de Pesquisas Espaciais</li>
+                                        <li><sup>4</sup>Universidade Federal do Rio de Janeiro</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
                 <div class="container-line fc">
