Atualização da página/responsividade do menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <img src="assets/icon.svg" alt="Logo do evento"> 
                 </div>
-                <ul id="itens" class="menu-itens">
+                <ul class="menu-itens">
                     <li>
                         <a href="#nav2"><span>Apresentação</span></a>
                     </li>
