--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h4>Anais do 13º Simpósio Latino Americano de Ciência de Alimentos</h4>
                         <i>Issn: 1234-5678</i>
                     </div>
-                    <div class="teste fr f-center">
+                    <div class="account fr f-center">
                         <div class="fc container-language">
                             <div class="select fr f-center f-j-spaceEvenly">
                                 <img src="/assets/language.svg" alt="Ícone do botão de linguagem">
@@ -401,7 +401,7 @@
                         <div>
                             <i>anais e proceedings</i>
                         </div>
-                        <button>
+                        <button class="fc f-center">
                             <a href="https://galoa.com.br/" >Saiba mais</a>
                         </button>
                     </div>
